force-app/main/default/objects/HRCSVC_BOM_Detail__c/HRCSVC_BOM_Detail__c.object-meta.xml
<CustomObject>
    <label>BOM Product Usage Detail</label>
    <nameField>
        <label>BOM Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOM Product Usage Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>