force-app/main/default/objects/HRCSVC_BOM_Detail__c/fields/BOM__c.field-meta.xml
<CustomField>
    <fullName>BOM__c</fullName>
    <label>BOM</label>
    <referenceTo>HRCSVC_BOM__c</referenceTo>
    <relationshipName>BOM_Detaiils</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>