force-app/main/default/objects/HRCSVC_BOM_Detail__c/fields/Product_Usage_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage_Unit_of_Measure__c</fullName>
    <label>Product Usage Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Cycles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>